syntax = "proto3";
package euc_backend;

import "google/protobuf/timestamp.proto";
import "enumps.proto";

message GetEventConditionRequest {
  optional int32 id = 1;
  optional string name = 2;
  optional google.protobuf.Timestamp start_event_date = 3;
  optional google.protobuf.Timestamp end_event_date = 4;
  optional EnumProto.EventType type =5;
  // google.protobuf.Timestamp created_at = 11;
  // google.protobuf.Timestamp updated_at = 12;
  // optional google.protobuf.Timestamp deleted_at = 13;
  optional int32 page =10;
  optional int32 limit =11;
  // optional bool is_extra =12;
  optional bool is_deleted =13;
  optional bool is_extra_member =15;
  optional bool is_extra_guest =16;
  optional bool is_extra_payment_session =17;
  optional bool is_extra_reiceipt_session =18;
  optional bool is_extra_place = 19;
}

message CreateEventRequest {
  string name = 2;
  google.protobuf.Timestamp start_event_date = 8;
  optional google.protobuf.Timestamp end_event_date = 9;
  EnumProto.EventType type =10;
}

message UpdateEventDataRequest {
  optional string name = 2;
  optional google.protobuf.Timestamp start_event_date = 8;
  optional google.protobuf.Timestamp end_event_date = 9;
  optional EnumProto.EventType type =10;
}

message UpdateEventRequest {
  GetEventConditionRequest conditions =1;
  UpdateEventDataRequest data =2;
}

message RemoveEventRequest {
  int32 id = 1;
}
