syntax = "proto3";
package euc_backend;

import "google/protobuf/timestamp.proto";
import "enumps.proto";

message GetReceiptSessionConditionRequest {
  optional int32 id = 1;
  optional string title = 2;
  optional string description = 3;
  optional EnumProto.SessionStatus status = 4;
  optional google.protobuf.Timestamp from_date_confirm = 5;
  optional google.protobuf.Timestamp to_date_confirm = 6;
  optional google.protobuf.Timestamp from_date_done = 7;
  optional google.protobuf.Timestamp to_date_done = 8;
  // google.protobuf.Timestamp created_at = 11;
  // google.protobuf.Timestamp updated_at = 12;
  // optional google.protobuf.Timestamp deleted_at = 13;
  optional int32 page =10;
  optional int32 limit =11;
  optional bool is_deleted =13;
  optional string user_name =14;
  optional bool is_extra_receipt =15;
  optional bool is_extra_event =16;
  optional bool is_extra_user_done =17;
  optional bool is_extra_user_confirm =18;
  optional bool is_extra_club =19;
}

message CreateReceiptSessionRequest {
  string title = 1;
  optional string description = 2;
  // EnumProto.SessionStatus status = 3;
  optional int32 event_id = 4;
}

message UpdateReceiptSessionDataRequest {
  optional string title = 2;
  optional string description = 3;
  optional EnumProto.SessionStatus status = 6;
  optional int32 fund_amount = 17;
  optional int32 amount = 18;
}

message UpdateReceiptSessionRequest {
  GetReceiptSessionConditionRequest conditions =1;
  UpdateReceiptSessionDataRequest data =2;
}

message RemoveReceiptSessionRequest {
  int32 id = 1;
}

message ConfirmReceiptSessionRequest {
  int32 id = 1;
}

message DoneReceiptSessionRequest {
  int32 id = 1;
}
